# GlassdoorRating

./: .gitignore  LICENSE  README.md  companies.yaml  config.yaml  loader.py  main.py  output.csv  output.py  output.txt  pyproject.toml  scraper.py
